syntax = "proto3";

package configure;

import "errors/errors.proto";
option go_package = "./v1;v1";


enum ErrorReason {
  // 设置缺省错误码
  option (errors.default_code) = 200;

  DatabaseError = 0[ (errors.message)="数据库错误"];
  TransformError = 1[(errors.message)="数据转换失败"];
  AlreadyExistsError = 2[(errors.message)="数据已存在"];
  ParamsError = 3[(errors.message)="参数错误"];
  NotRecordError = 4[(errors.message)="暂无数据记录"];
  ResourceFormatValueError = 5[(errors.message)="资源字段值格式错误"];
  CheckTemplateError = 6[(errors.message)="模板检测出现错误"];
  ParseTemplateError= 7[(errors.message)="模板解析出现错误"];
  VersionExistError = 8[(errors.message)="此版本已存在"];
  WatchConfigureError = 9[(errors.message)="监听版本更新失败"];
  RsaDecodeError  = 10[(errors.code)=400,(errors.message)="rsa解密失败"];
  PasswordFormatError = 11[(errors.code)=400,(errors.message)="密码格式错误"];
  PasswordExpireError = 12[(errors.code)=400,(errors.message)="密码已过期"];
  UserPasswordError = 13[(errors.code)=400,(errors.message)="用户密码错误"];
  NewTokenError = 14[(errors.code)=400,(errors.message)="token生成失败"];
  RefreshTokenError = 15 [(errors.code)=401,(errors.message)="刷新token失败"];
  TokenAuthError = 16 [(errors.code)=401,(errors.message)="token验证失败"];
  ServerNotFound = 17 [(errors.code)=401,(errors.message)="服务不存在"];
  ResourceValueError = 18[(errors.message)="资源值错误"];
}


