syntax = "proto3";

package configure_template;
option go_package = "./v1;v1";
import "validate/validate.proto";

message Template{
  uint32 id = 1;
  uint32 server_id = 2;
  string description = 3;
  string version = 4;
  string format = 5;
  bool is_use = 6;
  string compare = 7;
  string content = 8;
  uint32 created_at = 9;
}

message PageTemplateRequest{
  uint32 page = 1[(validate.rules).uint32 = {gt: 0}];
  uint32 page_size = 2[(validate.rules).uint32 = {gt: 0,lte:50}];
  uint32 server_id = 3[(validate.rules).uint32 = {gt: 0}];
}

message PageTemplateReply {
  uint32 total = 1;
  repeated Template list = 2;
}

// 查询指定模板
message CurrentTemplateRequest{
  uint32 server_id = 1[(validate.rules).uint32 = {gt: 0}];
}

message CurrentTemplateReply{
  uint32 id = 1;
  uint32 server_id = 2;
  string description = 3;
  string version = 4;
  string format = 5;
  bool is_use = 6;
  string compare = 7;
  string content = 8;
  uint32 created_at = 9;
}

// 查询指定模板
message GetTemplateRequest{
   uint32 id = 1[(validate.rules).uint32 = {gt: 0}];
}

message GetTemplateReply{
  uint32 id = 1;
  uint32 server_id = 2;
  string content = 3;
  string description = 4;
  string version = 5;
  optional bool is_use = 6;
  optional string operator = 7;
  optional uint32 operator_id = 8;
}

// 新增模板
message AddTemplateRequest {
  uint32 server_id = 1[(validate.rules).uint32 = {gt: 0}];
  string content = 2[(validate.rules).string = {min_len: 3}];
  string description = 3[(validate.rules).string = {min_len: 1, max_len: 64}];
  string format = 4 [(validate.rules).string = {min_len: 1, max_len: 64, in: ["json","yaml"]}];
}

// 切换模板
message SwitchTemplateRequest {
  uint32 id = 1 [(validate.rules).uint32 = {gt: 0}];
  uint32 server_id = 2[(validate.rules).uint32 = {gt: 0}];
}

// 预览配置
message PreviewTemplateRequest {
  uint32 env_id = 1[(validate.rules).uint32 = {gt: 0}];
  uint32 server_id = 2[(validate.rules).uint32 = {gt: 0}];
  string format = 3[(validate.rules).string = {min_len: 1, in: ["json","yaml"]}];
  string content = 4[(validate.rules).string = {min_len: 7}];
}

message PreviewTemplateReply {
  string content = 1;
}

// 解析配置
message ParseTemplateRequest {
  uint32 server_id = 1[(validate.rules).uint32 = {gt: 0}];
  uint32 env_id = 2[(validate.rules).uint32 = {gt: 0}];
}

message ParseTemplateReply {
  string content = 1;
  string format = 2;
}

message CompareTemplateRequest {
  uint32 id = 1 [(validate.rules).uint32 = {gt: 0}];
  string format = 2[(validate.rules).string = {min_len: 1, in: ["json","yaml"]}];
  string content = 3[(validate.rules).string = {min_len: 1}];
}

message CompareTemplateReply {
  repeated CompareTemplateInfo list = 1;
}

message CompareTemplateInfo {
  string type = 1;
  string key = 2;
  string old = 3;
  string cur = 4;
}